--- a/fortune-teller-mvc/Views/Customers/Index.cshtml
+++ b/fortune-teller-mvc/Views/Customers/Index.cshtml
@@ -3,8 +3,9 @@
 @{
     ViewBag.Title = "Index";
 }
+<link href="https://fonts.googleapis.com/css?family=Taviraj" rel="stylesheet">
 
-<h2>Index</h2>
+<h2>Fortune Teller</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
